Fixed alignment of shrink brand logo

--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,7 @@ a.header-brand.scroll-shrink {
 	background: url(https://static1.squarespace.com/static/5535bce1e4b071a2f7e12732/t/5588c853e4b08c8c8a72eaf7/1435027539849/icon.png) no-repeat;
 	height: 60px;
 	width: 60px;
-	margin-top:20px;
+	margin-top:10px;
 }
 
 .header-brand {
